# Course-Management-System

./: .gitignore  .gitmodules  CMakeLists.txt  DoublyLinkedList.cpp  DoublyLinkedList.h  DynamicArray.cpp  DynamicArray.h  LinkedList.cpp  LinkedList.h  Queue.cpp  Queue.h  README.md  Stack.cpp  Stack.h
.github/workflows/: cmake-single-platform.yml
data/: academic_staffs.csv  classes.csv  courses.csv  school_years.csv  scoreboards.csv  semesters.csv  students.csv  users.csv
docs/: Class.drawio  UseCase.drawio  addCourse.drawio
include/: CommonEntities.h  CommonInclude.h  CommonServices.h
src/: main.cpp
src/data_structures/: DoublyLinkedList.h  DoublyLinkedList.tpp  DoublyLinkedListImpl.h  DynamicArray.h  DynamicArray.tpp  DynamicArrayImpl.h  LinkedList.cpp  LinkedList.h  LinkedListImpl.h  Queue.cpp  Queue.h  QueueImpl.h  Stack.cpp  Stack.h  StackImpl.h
src/entities/: SchoolYear.h  Semester.h  academicStaff.cpp  academicStaff.h  class.cpp  class.h  course.cpp  course.h  date.cpp  date.h  datea.h  detailedScore.cpp  detailedScore.h  schoolYear.cpp  schoolYear.h  schoolyear.h  scoreboard.cpp  scoreboard.h  semester.cpp  semester.h  student.cpp  student.h  user.cpp  user.h
src/services/: CSVHandlingService.h  CSVHandlingServiceImpl.h  classManagementService.h  courseService.h  schoolManagementService.h  scoreboardService.h  userService.h
src/utils/: StringUtils.cpp  StringUtils.h  UUID.cpp  UUID.h
tests/: CMakeLists.txt  DoublyLinkedListTest.cpp  DynamicArrayTest.cpp  LinkedListTest.cpp  SemesterTest.cpp  StackTest.cpp  StudentTest.cpp  UserTest.cpp  test1.cpp
tests/data_structures/: QueueTest.cpp
tests/entities/: AcademicStaffTest.cpp  ClassTest.cpp  CourseTest.cpp  DateTest.cpp  SchoolYearTest.cpp  ScoreTest.cpp  SemesterTest.cpp  StudentTest.cpp
tests/services/: CSVHandlingServiceTest.cpp  CourseServiceTest.cpp  UserServiceTest.cpp
tests/utils/: StringUtilsTest.cpp
